Trying padding method on mobile to fix character render

--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,7 @@ code {
 
 @media (max-width: 640px) {
   h1 {
-    line-height: 1.2 !important;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    vertical-align: middle;
+    padding-bottom: 0.2em;
   }
 }
 
